--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hooper": "^0.3.4",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-slider-component": "^3.2.11",
     "vuex": "^3.4.0"
