--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "nerds",
-  "version": "0.1.0",
+  "name": "gllacy-shop",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,27 +7,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.16.2",
     "hooper": "^0.3.4",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-meta": "^2.4.0",
-    "vue-router": "^3.2.0",
-    "vue-slider-component": "^3.2.11",
-    "vuex": "^3.4.0"
+    "vue-router": "^3.5.2",
+    "vue-slider-component": "^3.2.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-eslint": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "execa": "^5.0.0",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.16.0",
+    "execa": "^5.1.1",
+    "sass": "^1.38.0",
+    "sass-loader": "^10",
+    "vue-template-compiler": "^2.6.14"
   }
 }
